# educlawn

./: .dockerignore  .gitignore  CONTRIBUTING.md  Install-EduClawn.bat  Install-EduClawn.command  LICENSE  Legacy_of_Justice.html  Open-EduClawn.bat  Open-EduClawn.command  README.md  docker-compose.yml  mlk-sw.js
.github/workflows/: desktop-release.yml
backend/: Dockerfile  README.md  pyproject.toml  run_server.py
backend/app/: main.py
backend/app/api/: ai_routes.py  ai_schemas.py  education_routes.py  education_schemas.py  educlaw_routes.py  educlaw_schemas.py  educlawn_routes.py  educlawn_schemas.py  routes.py  schemas.py  studio_routes.py  studio_schemas.py
backend/app/core/: config.py  security.py
backend/app/services/: agents.py  benchmarking.py  education_os.py  educlaw.py  educlawn.py  experimentation.py  feature_engineering.py  graph.py  knowledge.py  ml.py  orchestration.py  planner.py  provider_ai.py  studio_agents.py  studio_engine.py  temporal.py  warehouse.py
backend/scripts/: create_desktop_bootstrap.py
backend/tests/: test_ai_provider.py  test_api.py  test_education_os.py  test_educlaw.py  test_educlawn.py  test_model_cache.py  test_studio.py
community/: README.md
community/plugins/oral-history-pack/: plugin.json
community/plugins/standards-mapper/: plugin.json
community/sample_projects/: community-water-justice-portfolio.yaml  mlk-movement-strategy-exhibit.yaml  neighborhood-transit-campaign-simulator.yaml
desktop/: README.md  RELEASE_NOTES.md  main.mjs  package-lock.json  package.json  preload.mjs  signing.env.example
desktop/scripts/: build-backend.mjs  prepare-assets.mjs  run-builder.mjs  run-electron.mjs
docs/: EDUCLAW.md  EDUCLAWN.md  PLUGIN_SDK.md  TEMPLATE_SDK.md
educlaw/: educlaw.example.yaml
educlawn/: educlawn.example.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  desktop.d.ts  index.css  types.ts
scripts/: doctor.ps1  doctor.sh  setup-local.ps1  setup-local.sh  start-desktop.ps1  start-desktop.sh
studio/: project.example.yaml
studio/templates/: civic-campaign-simulator.json  debate-prep-kit.json  documentary-story.json  lesson-module.json  mlk-legacy-lab.json  museum-exhibit-site.json  reading-intervention-path.json  research-portfolio.json  science-fair-lab.json
