[project]
name = "mlk-legacy-intelligence"
version = "0.1.0"
description = "Advanced data engineering, analytics, and machine learning platform for the MLK legacy project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
  "numpy>=2.2.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "scikit-learn>=1.6.0,<2.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
